Small fixes in report template

--- a/assessment-report.tpl.html
+++ b/assessment-report.tpl.html
@@ -75,7 +75,7 @@ Monitor event conditions: ${event-conditions}
 Water temperature: ${water_temp}
 Air temperature: ${air_temp}
 Temperature scale: ${temp_scale}
-Channel condition:${channel-condition}
+Channel condition:${channel-conditions}
 Channelized? ${channelized}
 Estimate of current stream flow: ${stream-flow}
 Highest water mark: ${highest-water-mark}
@@ -119,7 +119,7 @@ Other: ${other-plants-on-bank-abundance}
 <tr>
   <td>Boulder</td>
   <td>&gt; 10" diameter</td>
-  <td>${stream-bed-percent}</td>
+  <td>${stream-bed-percent-boulder}</td>
   <td>${percent-embedded-boulder}</td>
 </tr>
 <tr>
@@ -275,7 +275,7 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 
     <tr>
       <td> - Recreational Boating (bank or shoreline erosion)</td>
-      <td>${recreational-boating-bank-erosion use_label_element}</td></tr>
+      <td>${recreational-boating-bank-erosion}</td></tr>
 
     <tr>
       <td>Debris in Water</td>
