--- a/assessment-form.html
+++ b/assessment-form.html
@@ -1,7 +1,7 @@
 <h2>I. Stream, Team, Location Information</h2>
 
 <label>Stream name</label>
-[select* site_name include_blank "Brent Run Creek" "Brent Run Headwaters" "Butternut Creek Headwaters" "Butternut Creek" "Evergreen Creek" "Farmers Creek" "Flint River Flushing" "Flint River Richfield" "Flint River South" "Flint River, Northbranch" "Gilkey Creek Headwaters" "Gilkey Creek" "Hasler Creek Headwaters" "Hasler Creek" "Hunters Creek" "Indian Creek" "Kearsley Creek Headwaters" "Kearsley Creek" "Misteguay Creek Headwaters" "Misteguay Creek" "Pine Run Creek" "Pine Run Headwaters" "Plum Creek" "Shiawasee River Argentine" "Shiawasee River Linden" "Silver Creek" "Springbank Creek" "Squaw Creek" "Swartz Creek Headwaters" "Swartz Creek" "Thread Creek Headwaters" "Thread Creek"]
+[select* site_name include_blank]
 
 <label>Collection Start Time</label>
 [text assessment_start 5/5 id:start-time placeholder "8:20"][radio assesment_start_am_pm "AM" "PM"]
