Change some headings for assessment report.

--- a/assessment-form.html
+++ b/assessment-form.html
@@ -362,7 +362,7 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 <label>Additional Comments</label>
 [textarea add_degradation_comments]
 
-<h3>Identification and Assesment</h3>
+<h3>VI. Identification and Assesment</h3>
 
 <table>
   <tbody>
@@ -424,7 +424,7 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
   </tbody>
 </table>
 
-<h4>Stream Quality Score</h4>
+<h3>VII. Stream Quality Score</h3>
 <h5>Group 1</h5>
 <label>[text* group_1_R_score_input 15/] # of R's x 5.0 = [text* group_1_R_score_result 15/]</label>
 <label>[text* group_1_C_score_input 15/] # of C's x 5.3 = [text* group_1_C_score_result 15/]</label>
