--- a/assessment-report.tpl.html
+++ b/assessment-report.tpl.html
@@ -1,4 +1,4 @@
-<h2>I. Stream, Team, Location Information</h2>
+<h3>I. Stream, Team, Location Information</h3>
 Site name: ${site_name}
 Assessment date: ${assessment_date}
 Start time: ${assessment_start} ${assessment_end_am_pm}
@@ -69,7 +69,7 @@ Right: ${stability-erosion-right}
 </tr>
 </table>
 
-<h4>IV. Stream and Riparian Habitat</h4>
+<h3>IV. Stream and Riparian Habitat</h3>
 <h5>A. General Information (select all that apply)</h5>
 Monitor event conditions: ${event-conditions}
 Water temperature: ${water_temp}
@@ -312,7 +312,7 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 Trash collection: ${trash_collection}
 Additional comments: ${add_degradation_comments}
 
-<h3>Identification and Assesment</h3>
+<h3>VI. Identification and Assesment</h3>
 <table>
   <tbody>
     <tr><td colspan=2><h4>Group 1: Sensitive</h4></td></tr>
@@ -348,7 +348,7 @@ Additional comments: ${add_degradation_comments}
   </tbody>
 </table>
 
-<h3>Conclusion</h3>
+<h3>VII. Conclusion</h3>
 <table>
   <tbody>
     <tr><td>Total Stream Quality Score</td><td>${stream_quality_score}</td></tr>
