Fixed email template URL
Typo and HTML entities

--- a/assessment-form-email.tpl.html
+++ b/assessment-form-email.tpl.html
@@ -1,6 +1,6 @@
 Site name: [site_name]
 Assessment date: [assessment_date]
 
-<a href="http://flintriver.org/blog/stream-habitat-assessment-report/?site_name=[site_name]&amp;assessment_date=[assessment_date]">View this assessment on Flint Rivers Watershed Coalition website &rarr;</a>
+<a href="http://flintriver.org/blog/stream-habitat-assessment-report/?site_name=[site_name]&amp;assessment_date=[assessment_date]">View this assessment on Flint River Watershed Coalition website &rarr;</a>
 
 <a href="http://flintriver.org/blog/wp-admin/admin.php?page=CF7DBPluginSubmissions&amp;form_name=Stream+Habitat+Assessment+Form&amp;submit_time=[submit_time]">Edit the values on this form in Wordpress &larr;</a>
