Added weather history field

--- a/assessment-form.html
+++ b/assessment-form.html
@@ -446,6 +446,9 @@ Severity: S - slight (0% - 25%), M - moderate (26% - 75%), H - high (76% - 100%)
 <label>Total Stream Quality Grade</label>
 [select* stream_quality_grade "Poor (< 19)" "Fair (19 - 33)" "Good (34 - 48)" "Excellent (> 48)"]
 
+<label>Weather History</label>
+[textarea* weather_history]
+
 <label>Identifications made by</label>
 [text* ids_made_by 50/]
 
